fix: remove text-align: justify

--- a/Sources/Portfolio/Public/articles/typography.css
+++ b/Sources/Portfolio/Public/articles/typography.css
@@ -89,7 +89,6 @@ h6 {
 
 p {
   margin-block: 1lh;
-  text-align: justify;
   font-family: ui-serif;
   line-height: 1.6;
   text-wrap: pretty;
